--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "author" : "YOU <YOU@example.com>",
-  "name" : "my_actionhero_project",
-  "description" : "my actionhero project",
-  "version" : "0.1.0",
-  "engines" : {
+  "author": "YOU <YOU@example.com>",
+  "name": "my_actionhero_project",
+  "description": "my actionhero project",
+  "version": "0.1.0",
+  "engines": {
     "node": ">=8.0.0"
   },
-  "dependencies" : {
-    "actionhero" : "19.0.2",
-    "ws" : "latest",
-    "ioredis" : "latest"
+  "dependencies": {
+    "actionhero": "19.0.2",
+    "ioredis": "latest",
+    "ws": "latest"
   },
-  "devDependencies" : {
+  "devDependencies": {
+    "@types/node": "8",
+    "eslint": "^5.5.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "jest": "latest",
-    "standard" : "latest"
+    "prettier": "^1.14.2",
+    "standard": "latest"
   },
-  "scripts" : {
-    "start" : "actionhero start",
-    "actionhero" : "actionhero",
+  "scripts": {
+    "start": "actionhero start",
+    "actionhero": "actionhero",
     "pretest": "standard",
-    "test" : "jest"
+    "test": "jest"
   },
   "standard": {
     "ignore": [
